added routing version v2 to show modules with "namespaces"

--- a/Angular1-Tutorial/10_Routing/start/index.html
+++ b/Angular1-Tutorial/10_Routing/start/index.html
@@ -34,9 +34,10 @@
 </head>
 
 <body data-ng-app="AngularJsDemoApp">
-
+<div class="container">
     <div data-ng-controller="homeController as vm">
         <h3>{{vm.value}}</h3>
+    </div>
     </div>
 
     <script src="libs/angular/angular.js"></script>
