added more tests

--- a/Angular1-Tutorial/04_0_First_Controller/end/index.html
+++ b/Angular1-Tutorial/04_0_First_Controller/end/index.html
@@ -34,11 +34,11 @@
 </head>
 
 <body data-ng-app="AngularJsDemoApp">
-
-    <div data-ng-controller="homeController">
-        <h3>{{value}}</h3>
+    <div class="container">
+        <div data-ng-controller="homeController">
+            <h3>{{value}}</h3>
+        </div>
     </div>
-
     <script src="libs/angular/angular.js"></script>
 
     <script src="app/application.js"></script>
