--- a/ASPNET-Demo-A1-A2/Angular2-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular2-Client/index.html
@@ -14,22 +14,18 @@
 </body>
 
 <!-- 1. Load libraries -->
-<!-- IE required polyfills, in this exact order -->
+<!-- Polyfill(s) for older browsers -->
 <script src="node_modules/es6-shim/es6-shim.min.js"></script>
-<script src="node_modules/systemjs/dist/system-polyfills.js"></script>
-<script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
 
-<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+<script src="node_modules/zone.js/dist/zone.js"></script>
+<script src="node_modules/reflect-metadata/Reflect.js"></script>
 <script src="node_modules/systemjs/dist/system.src.js"></script>
-<script src="node_modules/rxjs/bundles/Rx.js"></script>
-<script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-<script src="node_modules/angular2/bundles/router.dev.js"></script>
-<script src="node_modules/angular2/bundles/http.dev.js"></script>
-
 <script src="node_modules/jquery/dist/jquery.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-
 <!-- 2. Configure SystemJS -->
-<script src="js/system.config.js"></script>
+<script src="systemjs.config.js"></script>
+<script>
+  System.import('app').catch(function(err){ console.error(err);  });
+</script>
 
 </html>
