adding first module and more directives

--- a/Angular1-Tutorial/05_Directives/end/index.html
+++ b/Angular1-Tutorial/05_Directives/end/index.html
@@ -107,6 +107,8 @@
                     <isolated-Scope-Directive-With-Controller></isolated-Scope-Directive-With-Controller>
                 </p>
             </div>
+            <hr/>
+            <beautiful-Directive></beautiful-Directive>
         </div>
 
     </div>
