--- a/Angular1-Tutorial/04_1_First_Controller_In_File/end/index.html
+++ b/Angular1-Tutorial/04_1_First_Controller_In_File/end/index.html
@@ -43,6 +43,7 @@
 
     <script src="app/application.js"></script>
     <script src="app/home.controller.js"></script>
+    <script src="app/second.controller.js"></script>
 </body>
 
 </html>
