--- a/Angular1-Tutorial/00_HelloWorld/index.html
+++ b/Angular1-Tutorial/00_HelloWorld/index.html
@@ -46,7 +46,7 @@
     <script type="text/javascript">
         var app = angular.module("AngularJsDemoApp", []);
         app.controller("myFirstController", function myFirstController($scope) {
-            $scope.value = "asdasdasd";
+            $scope.value = "my first angular application";
         });
     </script>
 
