--- a/Angular1-Tutorial/04_0_First_Controller/start/index.html
+++ b/Angular1-Tutorial/04_0_First_Controller/start/index.html
@@ -36,7 +36,9 @@
 <body data-ng-app="AngularJsDemoApp">
 
     <div ng-controller="myFirstController">
-        <h1>{{value}}</h1>
+        <div class="container">
+            <h1>{{value}}</h1>
+        </div>
     </div>
 
     <script src="libs/angular/angular.js"></script>
