--- a/Angular1-Tutorial/04_2_ControllerAs_Syntax/start/index.html
+++ b/Angular1-Tutorial/04_2_ControllerAs_Syntax/start/index.html
@@ -36,7 +36,9 @@
 <body data-ng-app="AngularJsDemoApp">
 
     <div data-ng-controller="homeController">
-        <h3>{{value}}</h3>
+        <div class="container">
+            <h1>{{value}}</h1>
+        </div>
     </div>
 
     <script src="libs/angular/angular.js"></script>
