food component-further steps

--- a/ASPNET-Demo-A1-A2/Angular1-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/index.html
@@ -36,10 +36,12 @@
     <script src="app/root.module.js"></script>
     <script src="app/components/components.module.js"></script>
     <script src="app/components/home/home.module.js"></script>
+    <script src="app/components/food/food.module.js"></script>
     <script src="app/components/shared/shared.module.js"></script>
 
     <script src="app/root.component.js"></script>
     <script src="app/components/home/home/home.component.js"></script>
+    <script src="app/components/food/food-overview/food-overview.component.js"></script>
     <script src="app/components/shared/navigation/navigation.component.js"></script>
     <script src="app/components/shared/shell/shell.component.js"></script>
 
