--- a/ASPNET-Demo-A1-A2/Angular1-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/index.html
@@ -41,18 +41,20 @@
 
     <script src="app/root.component.js"></script>
     <script src="app/components/home/home/home.component.js"></script>
-    <script src="app/components/food/food-overview/food-overview.component.js"></script>
+
+    <script src="app/components/food/foods/foods.component.js"></script>
+    <script src="app/components/food/food-list/food-list.component.js"></script>
+    <script src="app/components/food/food-form/food-form.component.js"></script>
+
     <script src="app/components/shared/navigation/navigation.component.js"></script>
     <script src="app/components/shared/shell/shell.component.js"></script>
 
-
     <script src="app/components/home/home/home.controller.js"></script>
+    <script src="app/components/food/food-form/food-form.controller.js"></script>
+    <script src="app/components/food/food-list/food-list.controller.js"></script>
+    <script src="app/components/food/foods/foods.controller.js"></script>
 
     <script src="app/services/foodservice.js"></script>
-
-
-
-
 
 </body>
 
