--- a/ASPNET-Demo-A1-A2/Angular1-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/index.html
@@ -45,6 +45,8 @@
     <script src="app/components/food/foods/foods.component.js"></script>
     <script src="app/components/food/food-list/food-list.component.js"></script>
     <script src="app/components/food/food-form/food-form.component.js"></script>
+    <script src="app/components/food/food-detail/food-detail.component.js"></script>
+    <script src="app/components/food/food/food.component.js"></script>
 
     <script src="app/components/shared/navigation/navigation.component.js"></script>
     <script src="app/components/shared/shell/shell.component.js"></script>
@@ -53,6 +55,7 @@
     <script src="app/components/food/food-form/food-form.controller.js"></script>
     <script src="app/components/food/food-list/food-list.controller.js"></script>
     <script src="app/components/food/foods/foods.controller.js"></script>
+    <script src="app/components/food/food-detail/food-detail.controller.js"></script>
 
     <script src="app/services/foodservice.js"></script>
 
