--- a/ASPNET-Demo-A1-A2/Angular1-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/index.html
@@ -32,6 +32,9 @@
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-animate/angular-animate.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="node_modules/angular-animate/angular-animate.js"></script>
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script src="app/root.module.js"></script>
     <script src="app/components/components.module.js"></script>
@@ -41,13 +44,11 @@
 
     <script src="app/root.component.js"></script>
     <script src="app/components/home/home/home.component.js"></script>
-
     <script src="app/components/food/foods/foods.component.js"></script>
     <script src="app/components/food/food-list/food-list.component.js"></script>
     <script src="app/components/food/food-form/food-form.component.js"></script>
     <script src="app/components/food/food-detail/food-detail.component.js"></script>
     <script src="app/components/food/food/food.component.js"></script>
-
     <script src="app/components/shared/navigation/navigation.component.js"></script>
     <script src="app/components/shared/shell/shell.component.js"></script>
 
