--- a/ASPNET-Demo-A1-A2/Angular1-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="FabianGosebrink">
 
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/custom.css">
+    <link href="node_modules/angular-loading-bar/build/loading-bar.css" rel="stylesheet" />
+ 
+    <link href="css/custom.css" rel="stylesheet" >
 
     <title>Angular Js Demo Application</title>
 
@@ -35,12 +37,14 @@
     <script src="node_modules/angular-animate/angular-animate.js"></script>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/angular-loading-bar/build/loading-bar.js"></script>
 
     <script src="app/root.module.js"></script>
     <script src="app/components/components.module.js"></script>
     <script src="app/components/home/home.module.js"></script>
     <script src="app/components/food/food.module.js"></script>
     <script src="app/components/shared/shared.module.js"></script>
+    <script src="app/services/services.module.js"></script>
 
     <script src="app/root.component.js"></script>
     <script src="app/components/home/home/home.component.js"></script>
@@ -58,7 +62,7 @@
     <script src="app/components/food/foods/foods.controller.js"></script>
     <script src="app/components/food/food-detail/food-detail.controller.js"></script>
 
-    <script src="app/services/foodservice.js"></script>
+    <script src="app/services/food.service.js"></script>
 
 </body>
 
