--- a/ASPNET-Demo-A1-A2/Angular1-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/index.html
@@ -11,8 +11,9 @@
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="node_modules/angular-loading-bar/build/loading-bar.css" rel="stylesheet" />
- 
-    <link href="css/custom.css" rel="stylesheet" >
+
+    <link href=" node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" />
+    <link href="css/custom.css" rel="stylesheet">
 
     <title>Angular Js Demo Application</title>
 
@@ -38,6 +39,7 @@
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
 
     <script src="app/root.module.js"></script>
     <script src="app/components/components.module.js"></script>
