--- a/ASPNET-Demo-A1-A2/Angular1-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/index.html
@@ -8,12 +8,15 @@
     <meta name="description" content="">
     <meta name="author" content="FabianGosebrink">
 
+    <!-- inject:css -->
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="node_modules/angular-loading-bar/build/loading-bar.css" rel="stylesheet" />
-
-    <link href=" node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" />
+    <link href="node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet">
+    <!-- endinject -->
+
+
 
     <title>Angular Js Demo Application</title>
 
@@ -32,10 +35,10 @@
         <span class="loader">Loading...</span>
     </root>
 
+    <!-- inject:js -->
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-animate/angular-animate.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="node_modules/angular-animate/angular-animate.js"></script>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/angular-loading-bar/build/loading-bar.js"></script>
@@ -65,7 +68,7 @@
     <script src="app/components/food/food-detail/food-detail.controller.js"></script>
 
     <script src="app/services/food.service.js"></script>
-
+    <!-- endinject -->
 </body>
 
 </html>
