replacing all links to node_modules

--- a/Angular1-Tutorial/04_First_Module/end/index.html
+++ b/Angular1-Tutorial/04_First_Module/end/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="libs/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
-    <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 
     <title>Angular Js Demo Application</title>
 
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <script src="libs/angular/angular.js"></script>
+    <script src="node_modules/angular/angular.js"></script>
 
     <script src="app/application.js"></script>
     <script src="app/firstModule.module.js"></script>
