--- a/ASPNET-Demo-A1-A2/Angular2-Client/index.html
+++ b/ASPNET-Demo-A1-A2/Angular2-Client/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <base href="/" />
     <title>FoodChooser Angular 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
