--- a/Angular2-Tutorial/01_Components/start/index.html
+++ b/Angular2-Tutorial/01_Components/start/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Angular 2 QuickStart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 
 </head>
 <!-- 3. Display the application -->
