--- a/Angular2-Tutorial/01_Components/end/index.html
+++ b/Angular2-Tutorial/01_Components/end/index.html
@@ -4,18 +4,7 @@
   <title>Angular 2 QuickStart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-
-  <style>
-    body {
-      padding-top: 50px;
-    }
-    
-    .starter-template {
-      padding: 40px 15px;
-      text-align: center;
-    }
-  </style>
-
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <!-- 3. Display the application -->
 
@@ -25,8 +14,7 @@
 
 <!-- 1. Load libraries -->
 <!-- Polyfill(s) for older browsers -->
-<script src="node_modules/es6-shim/es6-shim.min.js"></script>
-
+<script src="node_modules/core-js/client/shim.min.js"></script>
 <script src="node_modules/zone.js/dist/zone.js"></script>
 <script src="node_modules/reflect-metadata/Reflect.js"></script>
 <script src="node_modules/systemjs/dist/system.src.js"></script>
