--- a/Angular2-Tutorial/05_DependencyInjection/start/index.html
+++ b/Angular2-Tutorial/05_DependencyInjection/start/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Angular 2 QuickStart</title>
+  <title>Angular 2 Course</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 
