--- a/Angular2-Tutorial/08_Modules/end/index.html
+++ b/Angular2-Tutorial/08_Modules/end/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <base href="/" />
   <title>Angular 2 Course</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
